--- a/src/yaml/elementalist.yaml
+++ b/src/yaml/elementalist.yaml
@@ -4,50 +4,50 @@
     text: 'Signet of Fire'
     modifiers:
       buff: {'Precision': 180}
-    armory-embed: 'skills'
-    armory-id: 5542
+    gw2-id: 5542
+    armory-type: 'skills'
 
   signet-of-earth:
     text: 'Signet of Earth'
     modifiers:
       buff: {'Toughness': 180}
-    armory-embed: 'skills'
-    armory-id: 5571
+    gw2-id: 5571
+    armory-type: 'skills'
 
   flame-axe:
     text: 'Flame Axe'
     modifiers:
       buff: {'Power': 180, 'Condition Damage': 180}
-    armory-embed: 'skills'
-    armory-id: 5540
+    gw2-id: 5540
+    armory-type: 'skills'
 
   earth-shield:
     text: 'Earth Shield'
     modifiers:
       buff: {'Vitality': 180, 'Toughness': 180}
-    armory-embed: 'skills'
-    armory-id: 5546
+    gw2-id: 5546
+    armory-type: 'skills'
 
   fiery-greatsword:
     text: 'Fiery Greatsword'
     modifiers:
       buff: {'Power': 260, 'Condition Damage': 180}
-    armory-embed: 'skills'
-    armory-id: 5516
+    gw2-id: 5516
+    armory-type: 'skills'
 
   lightning-hammer:
     text: 'Lightning Hammer'
     modifiers:
       buff: {'Precision': 180, 'Ferocity': 75}
-    armory-embed: 'skills'
-    armory-id: 5624
+    gw2-id: 5624
+    armory-type: 'skills'
 
   frost-bow:
     text: 'Frost Bow'
     modifiers:
       buff: {'Healing Power': 180, 'Condition Duration': 20}
-    armory-embed: 'skills'
-    armory-id: 5567
+    gw2-id: 5567
+    armory-type: 'skills'
 
 - SECTION: 'Fire'
 
@@ -55,43 +55,43 @@
     text: 'Empowering Flame (100% in <span data-armory-size="16" data-armory-embed="skills" data-armory-ids="5492"></span>)'
     modifiers:
       buff: {'Power': 150}
-    armory-embed: 'traits'
-    armory-id: 320
+    gw2-id: 320
+    armory-type: 'traits'
 
   burning-precision:
     text: 'Burning Precision'
     modifiers:
       buff: {'Burning Duration': 20}
-    armory-embed: 'traits'
-    armory-id: 296
+    gw2-id: 296
+    armory-type: 'traits'
 
   burning-rage:
     text: 'Burning Rage'
     modifiers:
       buff: {'Condition Damage': 180}
-    armory-embed: 'traits'
-    armory-id: 325
+    gw2-id: 325
+    armory-type: 'traits'
 
   power-overwhelming:
     text: 'Power Overwhelming <small>perma</small>'
     modifiers:
       buff: {'Power': 150}
-    armory-embed: 'traits'
-    armory-id: 334
+    gw2-id: 334
+    armory-type: 'traits'
 
   power-overwhelming-2:
     text: 'Power Overwhelming (100% in <span data-armory-size="16" data-armory-embed="skills" data-armory-ids="5492"></span> - tick both)'
     modifiers:
       buff: {'Power': 150}
-    armory-embed: 'traits'
-    armory-id: 334
+    gw2-id: 334
+    armory-type: 'traits'
 
   pyromancers-training:
     text: 'Pyromancer''s Training'
     modifiers:
       multiplier: {'Effective Power': 0.1}
-    armory-embed: 'traits'
-    armory-id: 319
+    gw2-id: 319
+    armory-type: 'traits'
 
 - SECTION: 'Air'
 
@@ -99,50 +99,50 @@
     text: 'Ferocious Winds'
     modifiers:
       convert: {'Ferocity': {'Precision': 0.07}}
-    armory-embed: 'traits'
-    armory-id: 232
+    gw2-id: 232
+    armory-type: 'traits'
 
   raging-storm:
     text: 'Raging Storm'
     modifiers:
       buff: {'Ferocity': 180}
-    armory-embed: 'traits'
-    armory-id: 214
+    gw2-id: 214
+    armory-type: 'traits'
 
   stormsoul:
     text: 'Stormsoul'
     modifiers:
       multiplier: {'Effective Power': 0.1}
-    armory-embed: 'traits'
-    armory-id: 1502
+    gw2-id: 1502
+    armory-type: 'traits'
 
   aeromancers-training:
     text: 'Aeromancer''s Training <small>perma</small>'
     modifiers:
       buff: {'Ferocity': 150}
-    armory-embed: 'traits'
-    armory-id: 223
+    gw2-id: 223
+    armory-type: 'traits'
 
   aeromancers-training-2:
     text: 'Aeromancer''s Training (100% in <span data-armory-size="16" data-armory-embed="skills" data-armory-ids="5494"></span> - tick both)'
     modifiers:
       buff: {'Ferocity': 150}
-    armory-embed: 'traits'
-    armory-id: 223
+    gw2-id: 223
+    armory-type: 'traits'
 
   bolt-to-the-heart:
     text: 'Bolt to the Heart <small>50% uptime</small>'
     modifiers:
       multiplier: {'Effective Power': 0.1}
-    armory-embed: 'traits'
-    armory-id: 226
+    gw2-id: 226
+    armory-type: 'traits'
 
   fresh-air:
     text: 'Fresh Air <small>100% uptime</small>'
     modifiers:
       buff: {'Ferocity': 250}
-    armory-embed: 'traits'
-    armory-id: 1503
+    gw2-id: 1503
+    armory-type: 'traits'
 
 - SECTION: 'Earth'
 
@@ -150,30 +150,30 @@
     text: 'Stone Flesh (100% in <span data-armory-size="16" data-armory-embed="skills" data-armory-ids="5495"></span>)'
     modifiers:
       multiplier: {'Effective Health': 0.07}
-    armory-embed: 'traits'
-    armory-id: 278
+    gw2-id: 278
+    armory-type: 'traits'
 
   serrated-stones:
     text: 'Serrated Stones'
     modifiers:
       multiplier: {'Effective Power': 0.05}
       buff: {'Bleeding Duration': 20}
-    armory-embed: 'traits'
-    armory-id: 1507
+    gw2-id: 1507
+    armory-type: 'traits'
 
   strength-of-stone:
     text: 'Strength of Stone'
     modifiers:
       convert: {'Condition Damage': {'Toughness': 0.1}}
-    armory-embed: 'traits'
-    armory-id: 275
+    gw2-id: 275
+    armory-type: 'traits'
 
   geomancers-defense:
     text: 'Geomancer''s Defense'
     modifiers:
       multiplier: {'Effective Health': 0.1}
-    armory-embed: 'traits'
-    armory-id: 280
+    gw2-id: 280
+    armory-type: 'traits'
 
 - SECTION: 'Water'
 
@@ -181,29 +181,29 @@
     text: 'Piercing Shards'
     modifiers:
       multiplier: {'Effective Power': 0.1}
-    armory-embed: 'traits'
-    armory-id: 363
+    gw2-id: 363
+    armory-type: 'traits'
 
   piercing-blades-2:
     text: 'Piercing Shards <small>100% in <span data-armory-size="16" data-armory-embed="skills" data-armory-ids="5493"></span> - tick both</small>'
     modifiers:
       multiplier: {'Effective Power': 0.1}
-    armory-embed: 'traits'
-    armory-id: 363
+    gw2-id: 363
+    armory-type: 'traits'
 
   flow-like-water:
     text: 'Flow like Water'
     modifiers:
       multiplier: {'Effective Power': 0.1}
-    armory-embed: 'traits'
-    armory-id: 349
+    gw2-id: 349
+    armory-type: 'traits'
 
   aquamancers-training:
     text: 'Aquamancer''s Training'
     modifiers:
       multiplier: {'Effective Healing': 0.15}
-    armory-embed: 'traits'
-    armory-id: 1676
+    gw2-id: 1676
+    armory-type: 'traits'
 
 - SECTION: 'Arcane'
 
@@ -211,29 +211,29 @@
     text: 'Elemental Enchantment'
     modifiers:
       buff: {'Concentration': 180}
-    armory-embed: 'traits'
-    armory-id: 2004
+    gw2-id: 2004
+    armory-type: 'traits'
 
   elemental-surge:
     text: 'Elemental Surge (100% uptime)'
     modifiers:
       flat: {'Ferocity': 150}
-    armory-embed: 'traits'
-    armory-id: 263
+    gw2-id: 263
+    armory-type: 'traits'
 
   bountiful-power:
     text: 'Bountiful Power <small>6x</small>'
     modifiers:
       multiplier: {'Effective Power': 0.12}
-    armory-embed: 'traits'
-    armory-id: 1511
+    gw2-id: 1511
+    armory-type: 'traits'
 
   bountiful-power-9:
     text: 'Bountiful Power <small>9x</small>'
     modifiers:
       multiplier: {'Effective Power': 0.18}
-    armory-embed: 'traits'
-    armory-id: 1511
+    gw2-id: 1511
+    armory-type: 'traits'
 
 - SECTION: 'Tempest'
 
@@ -241,22 +241,22 @@
     text: 'Gathered Focus <small>100%</small>'
     modifiers:
       buff: {'Concentration': 240}
-    armory-embed: 'traits'
-    armory-id: 1938
+    gw2-id: 1938
+    armory-type: 'traits'
 
   hardy-conduit:
     text: 'Hardy Conduit'
     modifiers:
       multiplier: {'Effective Health': 0.1167}
-    armory-embed: 'traits'
-    armory-id: 1948
+    gw2-id: 1948
+    armory-type: 'traits'
 
   transcendent-tempest:
     text: 'Transcendent Tempest'
     modifiers:
       multiplier: {'add: Effective Power': 0.07, 'add: Effective Condition Damage': 0.07}
-    armory-embed: 'traits'
-    armory-id: 1839
+    gw2-id: 1839
+    armory-type: 'traits'
 
 - SECTION: 'Weaver'
 
@@ -264,58 +264,58 @@
     text: 'Superior Elements <small>100% uptime</small>'
     modifiers:
       buff: {'Critical Chance': 10}
-    armory-embed: 'traits'
-    armory-id: 2177
+    gw2-id: 2177
+    armory-type: 'traits'
 
   masters-fortitude:
     text: 'Master''s Fortitude <small>With Sword</small>'
     modifiers:
       flat: {'Vitality': 120}
       convert: {'Vitality': {'Power': 0.05, 'Condition Damage': 0.05}}
-    armory-embed: 'traits'
-    armory-id: 2115
+    gw2-id: 2115
+    armory-type: 'traits'
 
   masters-fortitude-without:
     text: 'Master''s Fortitude <small>Without Sword</small>'
     modifiers:
       convert: {'Vitality': {'Power': 0.05, 'Condition Damage': 0.05}}
-    armory-embed: 'traits'
-    armory-id: 2115
+    gw2-id: 2115
+    armory-type: 'traits'
 
   weavers-prowess:
     text: 'Weaver''s Prowess <small>100% uptime</small>'
     modifiers:
       multiplier: {'add: Effective Condition Damage': 0.1}
       buff: {'Condition Duration': 20}
-    armory-embed: 'traits'
-    armory-id: 2180
+    gw2-id: 2180
+    armory-type: 'traits'
 
   swift-revenge:
     text: 'Swift Revenge'
     modifiers:
       multiplier: {'add: Effective Power': 0.1}
-    armory-embed: 'traits'
-    armory-id: 2061
+    gw2-id: 2061
+    armory-type: 'traits'
 
   elemental-polyphony-fire:
     text: 'Elemental Polyphony (100% in <span data-armory-size="16" data-armory-embed="skills" data-armory-ids="5492"></span>)'
     modifiers:
       buff: {'Power': 120}
-    armory-embed: 'traits'
-    armory-id: 2081
+    gw2-id: 2081
+    armory-type: 'traits'
 
   elemental-polyphony-air:
     text: 'Elemental Polyphony (100% in <span data-armory-size="16" data-armory-embed="skills" data-armory-ids="5494"></span>)'
     modifiers:
       buff: {'Ferocity': 120}
-    armory-embed: 'traits'
-    armory-id: 2081
+    gw2-id: 2081
+    armory-type: 'traits'
 
   elements-of-rage:
     text: 'Elements of Rage'
     modifiers:
       multiplier: {'add: Effective Condition Damage': 0.05}
       convert: {'Precision': {'Vitality': 0.13}}
-    armory-embed: 'traits'
-    armory-id: 2131
+    gw2-id: 2131
+    armory-type: 'traits'
 
