--- a/src/yaml/engineer.yaml
+++ b/src/yaml/engineer.yaml
@@ -4,36 +4,36 @@
     text: 'Glass Cannon'
     modifiers:
       multiplier: {'Effective Power': 0.1}
-    armory-embed: 'traits'
-    armory-id: 1882
+    gw2-id: 1882
+    armory-type: 'traits'
 
   explosive-temper:
     text: 'Explosive Temper <small>10</small>'
     modifiers:
       buff: {'Ferocity': 200}
-    armory-embed: 'traits'
-    armory-id: 1892
+    gw2-id: 1892
+    armory-type: 'traits'
 
   blast-shield:
     text: 'Blast Shield'
     modifiers:
       convert: {'Vitality': {'Power': 0.1}}
-    armory-embed: 'traits'
-    armory-id: 1944
+    gw2-id: 1944
+    armory-type: 'traits'
 
   shaped-charge:
     text: 'Shaped Charge <small>25</small>'
     modifiers:
       multiplier: {'Effective Power': 0.125}
-    armory-embed: 'traits'
-    armory-id: 429
+    gw2-id: 429
+    armory-type: 'traits'
 
   big-boomer:
     text: 'Big Boomer <small>100%</small>'
     modifiers:
       multiplier: {'Effective Power': 0.1}
-    armory-embed: 'traits'
-    armory-id: 1947
+    gw2-id: 1947
+    armory-type: 'traits'
 
 - SECTION: 'Firearms'
 
@@ -41,65 +41,65 @@
     text: 'Chemical Rounds'
     modifiers:
       buff: {'Condition Damage': 120}
-    armory-embed: 'traits'
-    armory-id: 1878
+    gw2-id: 1878
+    armory-type: 'traits'
 
   high-caliber:
     text: 'High Caliber'
     modifiers:
       buff: {'Critical Chance': 15}
-    armory-embed: 'traits'
-    armory-id: 1914
+    gw2-id: 1914
+    armory-type: 'traits'
 
   hematic-focus:
     text: 'Hematic Focus'
     modifiers:
       buff: {'Critical Chance': 10}
-    armory-embed: 'traits'
-    armory-id: 536
+    gw2-id: 536
+    armory-type: 'traits'
 
   thermal-vision:
     text: 'Thermal Vision'
     modifiers:
       flat: {'Expertise': 150}
       multiplier: {'add: Effective Condition Damage': 0.05}
-    armory-embed: 'traits'
-    armory-id: 2006
+    gw2-id: 2006
+    armory-type: 'traits'
 
   no-scope:
     text: 'No Scope'
     modifiers:
       buff: {'Ferocity': 150}
-    armory-embed: 'traits'
-    armory-id: 1923
+    gw2-id: 1923
+    armory-type: 'traits'
 
   serrated-steel:
     text: 'Serrated Steel'
     modifiers:
       flat: {'Bleeding Duration': 33}
-    armory-embed: 'traits'
-    armory-id: 516
+    gw2-id: 516
+    armory-type: 'traits'
 
   modified-ammunition-10:
     text: 'Modified Ammunition <small>10</small>'
     modifiers:
       multiplier: {'Effective Power': 0.2}
-    armory-embed: 'traits'
-    armory-id: 526
+    gw2-id: 526
+    armory-type: 'traits'
 
   modified-ammunition-14:
     text: 'Modified Ammunition <small>14</small>'
     modifiers:
       multiplier: {'Effective Power': 0.28}
-    armory-embed: 'traits'
-    armory-id: 526
+    gw2-id: 526
+    armory-type: 'traits'
 
   incendiary-powder:
     text: 'Incendiary Powder'
     modifiers:
       flat: {'Burning Duration': 33}
-    armory-embed: 'traits'
-    armory-id: 433
+    gw2-id: 433
+    armory-type: 'traits'
 
 - SECTION: 'Inventions'
 
@@ -107,15 +107,15 @@
     text: 'Over Shield'
     modifiers:
       multiplier: {'Effective Health': 0.066}
-    armory-embed: 'traits'
-    armory-id: 394
+    gw2-id: 394
+    armory-type: 'traits'
 
   energy-amplifier:
     text: 'Energy Amplifier'
     modifiers:
       buff: {'Healing Power': 120}
-    armory-embed: 'traits'
-    armory-id: 519
+    gw2-id: 519
+    armory-type: 'traits'
 
 - SECTION: 'Alchemy'
 
@@ -123,15 +123,15 @@
     text: 'Health Insurance <small>in med kit</small>'
     modifiers:
       multiplier: {'Effective Healing': 0.2}
-    armory-embed: 'traits'
-    armory-id: 521
+    gw2-id: 521
+    armory-type: 'traits'
 
   compounding-chemicals:
     text: 'Compounding Chemicals'
     modifiers:
       buff: {'Concentration': 240}
-    armory-embed: 'traits'
-    armory-id: 413
+    gw2-id: 413
+    armory-type: 'traits'
 
 - SECTION: 'Tools'
 
@@ -139,8 +139,8 @@
     text: 'Excessive Energy'
     modifiers:
       multiplier: {'add: Effective Power': 0.1}
-    armory-embed: 'traits'
-    armory-id: 1936
+    gw2-id: 1936
+    armory-type: 'traits'
 
 - SECTION: 'Scrapper'
 
@@ -148,34 +148,34 @@
     text: 'Object in Motion (One)'
     modifiers:
       multiplier: {'Effective Power': 0.05}
-    armory-embed: 'traits'
-    armory-id: 1860
+    gw2-id: 1860
+    armory-type: 'traits'
 
   object-in-motion-2:
     text: 'Object in Motion (Two)'
     modifiers:
       multiplier: {'Effective Power': 0.1}
-    armory-embed: 'traits'
-    armory-id: 1860
+    gw2-id: 1860
+    armory-type: 'traits'
 
   object-in-motion-3:
     text: 'Object in Motion (Three)'
     modifiers:
       multiplier: {'Effective Power': 0.15}
-    armory-embed: 'traits'
-    armory-id: 1860
+    gw2-id: 1860
+    armory-type: 'traits'
 
   impact-savant:
     text: 'Impact Savant'
     modifiers:
       buff: {'Vitality': -180}
-    armory-embed: 'traits'
-    armory-id: 1877
+    gw2-id: 1877
+    armory-type: 'traits'
 
   applied-force:
     text: 'Applied Force <small>25 might</small>'
     modifiers:
       buff: {'Power': 250}
-    armory-embed: 'traits'
-    armory-id: 1849
+    gw2-id: 1849
+    armory-type: 'traits'
 
