--- a/src/yaml/mesmer.yaml
+++ b/src/yaml/mesmer.yaml
@@ -4,15 +4,15 @@
     text: 'Signet of Domination'
     modifiers:
       buff: {'Condition Damage': 180}
-    armory-embed: 'skills'
-    armory-id: 10232
+    gw2-id: 10232
+    armory-type: 'skills'
 
   signet-of-midnight:
     text: 'Signet of Midnight'
     modifiers:
       buff: {'Expertise': 180}
-    armory-embed: 'skills'
-    armory-id: 10234
+    gw2-id: 10234
+    armory-type: 'skills'
 
 - SECTION: 'Domination'
 
@@ -20,22 +20,22 @@
     text: 'Fragility <small>25x</small>'
     modifiers:
       multiplier: {'Effective Power': 0.125}
-    armory-embed: 'traits'
-    armory-id: 1941
+    gw2-id: 1941
+    armory-type: 'traits'
 
   egotism:
     text: 'Egotism'
     modifiers:
       multiplier: {'Effective Power': 0.1}
-    armory-embed: 'traits'
-    armory-id: 713
+    gw2-id: 713
+    armory-type: 'traits'
 
   vicious-expression:
     text: 'Vicious Expression'
     modifiers:
       multiplier: {'Effective Power': 0.15}
-    armory-embed: 'traits'
-    armory-id: 681
+    gw2-id: 681
+    armory-type: 'traits'
 
 - SECTION: 'Dueling'
 
@@ -43,15 +43,15 @@
     text: 'Fencer''s Finesse <small>10x</small>'
     modifiers:
       buff: {'Ferocity': 150}
-    armory-embed: 'traits'
-    armory-id: 708
+    gw2-id: 708
+    armory-type: 'traits'
 
   superiority-complex:
     text: 'Superiority Complex <small>50% uptime -&gt; +20% Critical Damage</small>'
     modifiers:
       multiplier: {'Critical Damage': 0.2}
-    armory-embed: 'traits'
-    armory-id: 692
+    gw2-id: 692
+    armory-type: 'traits'
 
 - SECTION: 'Chaos'
 
@@ -59,36 +59,36 @@
     text: 'Illusionary Defense <small>5x</small>'
     modifiers:
       multiplier: {'Effective Health': 0.25}
-    armory-embed: 'traits'
-    armory-id: 675
+    gw2-id: 675
+    armory-type: 'traits'
 
   illusionary-membrane:
     text: 'Illusionary Membrane <small>100%</small>'
     modifiers:
       multiplier: {'add: Effective Condition Damage': 0.1}
-    armory-embed: 'traits'
-    armory-id: 667
+    gw2-id: 667
+    armory-type: 'traits'
 
   chaotic-potency:
     text: 'Chaotic Potency <small>base</small>'
     modifiers:
       buff: {'Condition Damage': 120}
-    armory-embed: 'traits'
-    armory-id: 669
+    gw2-id: 669
+    armory-type: 'traits'
 
   chaotic-potency-2:
     text: 'Chaotic Potency <small>with staff - check both boxes</small>'
     modifiers:
       buff: {'Condition Damage': 120}
-    armory-embed: 'traits'
-    armory-id: 669
+    gw2-id: 669
+    armory-type: 'traits'
 
   chaotic-persistence:
     text: 'Chaotic Persistence <small>100%</small>'
     modifiers:
       buff: {'Concentration': 250, 'Expertise': 250}
-    armory-embed: 'traits'
-    armory-id: 1865
+    gw2-id: 1865
+    armory-type: 'traits'
 
 - SECTION: 'Inspiration'
 
@@ -96,8 +96,8 @@
     text: 'Healing Prism'
     modifiers:
       convert: {'Healing Power': {'Power': 0.13}}
-    armory-embed: 'traits'
-    armory-id: 1915
+    gw2-id: 1915
+    armory-type: 'traits'
 
 - SECTION: 'Illusions'
 
@@ -106,8 +106,8 @@
     modifiers:
       multiplier: {'add: Effective Power': 0.1}
       buff: {'Condition Damage': 150}
-    armory-embed: 'traits'
-    armory-id: 723
+    gw2-id: 723
+    armory-type: 'traits'
 
 - SECTION: 'Chronomancer'
 
@@ -115,8 +115,8 @@
     text: 'Danger Time'
     modifiers:
       buff: {'Critical Chance': 15}
-    armory-embed: 'traits'
-    armory-id: 2009
+    gw2-id: 2009
+    armory-type: 'traits'
 
 - SECTION: 'Mirage'
 
@@ -124,6 +124,6 @@
     text: 'Nomad''s Endurance'
     modifiers:
       buff: {'Condition Damage': 150}
-    armory-embed: 'traits'
-    armory-id: 2069
+    gw2-id: 2069
+    armory-type: 'traits'
 
