--- a/src/yaml/revenant.yaml
+++ b/src/yaml/revenant.yaml
@@ -4,36 +4,36 @@
     text: 'Acolyte of Torment'
     modifiers:
       multiplier: {'Torment Damage': 0.1}
-    armory-embed: 'traits'
-    armory-id: 1793
+    gw2-id: 1793
+    armory-type: 'traits'
 
   seething-malice:
     text: 'Seething Malice'
     modifiers:
       buff: {'Condition Damage': 120}
-    armory-embed: 'traits'
-    armory-id: 1801
+    gw2-id: 1801
+    armory-type: 'traits'
 
   demonic-resistance:
     text: 'Demonic Resistance'
     modifiers:
       multiplier: {'Effective Health': 0.2}
-    armory-embed: 'traits'
-    armory-id: 1726
+    gw2-id: 1726
+    armory-type: 'traits'
 
   pact-of-pain:
     text: 'Pact of Pain'
     modifiers:
       buff: {'Condition Duration': 15}
-    armory-embed: 'traits'
-    armory-id: 1714
+    gw2-id: 1714
+    armory-type: 'traits'
 
   yearning-empowerment:
     text: 'Yearning Empowerement'
     modifiers:
       buff: {'Condition Duration': 10}
-    armory-embed: 'traits'
-    armory-id: 1744
+    gw2-id: 1744
+    armory-type: 'traits'
 
 - SECTION: 'Retribution'
 
@@ -41,29 +41,29 @@
     text: 'Dwarven Battle Training'
     modifiers:
       multiplier: {'Effective Power': 0.1}
-    armory-embed: 'traits'
-    armory-id: 1740
+    gw2-id: 1740
+    armory-type: 'traits'
 
   determined-resolution:
     text: 'Determined Resolution'
     modifiers:
       multiplier: {'Effective Health': 0.1}
-    armory-embed: 'traits'
-    armory-id: 1713
+    gw2-id: 1713
+    armory-type: 'traits'
 
   vicious-reprisal:
     text: 'Vicious Reprisal <small>100%</small>'
     modifiers:
       multiplier: {'add: Effective Power': 0.1, 'add: Effective Condition Damage': 0.1}
-    armory-embed: 'traits'
-    armory-id: 1779
+    gw2-id: 1779
+    armory-type: 'traits'
 
   versed-in-stone:
     text: 'Versed in Stone'
     modifiers:
       convert: {'Power': {'Toughness': 0.13}}
-    armory-embed: 'traits'
-    armory-id: 1770
+    gw2-id: 1770
+    armory-type: 'traits'
 
 - SECTION: 'Invocation'
 
@@ -71,22 +71,22 @@
     text: 'Rising Tide'
     modifiers:
       multiplier: {'Effective Power': 0.07}
-    armory-embed: 'traits'
-    armory-id: 1761
+    gw2-id: 1761
+    armory-type: 'traits'
 
   ferocious-aggression:
     text: 'Ferocious Aggression'
     modifiers:
       multiplier: {'add: Effective Power': 0.07, 'add: Effective Condition Damage': 0.07}
-    armory-embed: 'traits'
-    armory-id: 1758
+    gw2-id: 1758
+    armory-type: 'traits'
 
   roiling-mists:
     text: 'Roiling Mists'
     modifiers:
       buff: {'Critical Chance': 20}
-    armory-embed: 'traits'
-    armory-id: 1719
+    gw2-id: 1719
+    armory-type: 'traits'
 
 - SECTION: 'Devastation'
 
@@ -94,50 +94,50 @@
     text: 'Unsuspecting Strikes <small>20% uptime -&gt; +4% Damage</small>'
     modifiers:
       multiplier: {'Effective Power': 0.04}
-    armory-embed: 'traits'
-    armory-id: 1767
+    gw2-id: 1767
+    armory-type: 'traits'
 
   destructive-impulses-dual:
     text: 'Destructive Impulses <small>Dual wielded</small>'
     modifiers:
       multiplier: {'add: Effective Power': 0.1, 'add: Effective Condition Damage': 0.1}
-    armory-embed: 'traits'
-    armory-id: 1724
+    gw2-id: 1724
+    armory-type: 'traits'
 
   destructive-impulses:
     text: 'Destructive Impulses <small>Two handed</small>'
     modifiers:
       multiplier: {'add: Effective Power': 0.05, 'add: Effective Condition Damage': 0.05}
-    armory-embed: 'traits'
-    armory-id: 1724
+    gw2-id: 1724
+    armory-type: 'traits'
 
   destructive-impulses-mix:
     text: 'Destructive Impulses <small>50% dual wield, 50% 2h</small>'
     modifiers:
       multiplier: {'add: Effective Power': 0.075, 'add: Effective Condition Damage': 0.075}
-    armory-embed: 'traits'
-    armory-id: 1724
+    gw2-id: 1724
+    armory-type: 'traits'
 
   notoriety:
     text: 'Notoriety <small>25 might</small>'
     modifiers:
       buff: {'Power': 250, 'Condition Damage': -250}
-    armory-embed: 'traits'
-    armory-id: 1765
+    gw2-id: 1765
+    armory-type: 'traits'
 
   targeted-destruction:
     text: 'Targeted Destruction <small>25 vulnerability</small>'
     modifiers:
       multiplier: {'Effective Power': 0.125}
-    armory-embed: 'traits'
-    armory-id: 1792
+    gw2-id: 1792
+    armory-type: 'traits'
 
   swift-termination:
     text: 'Swift Termination'
     modifiers:
       multiplier: {'Effective Power': 0.1}
-    armory-embed: 'traits'
-    armory-id: 1800
+    gw2-id: 1800
+    armory-type: 'traits'
 
 - SECTION: 'Salvation'
 
@@ -145,23 +145,23 @@
     text: 'Tranquil Balance'
     modifiers:
       multiplier: {'Effective Healing': 0.2}
-    armory-embed: 'traits'
-    armory-id: 1822
+    gw2-id: 1822
+    armory-type: 'traits'
 
   life-attunement:
     text: 'Life Attunement'
     modifiers:
       buff: {'Healing Power': 120}
       convert: {'Concentration': {'Healing Power': 0.07}}
-    armory-embed: 'traits'
-    armory-id: 1821
+    gw2-id: 1821
+    armory-type: 'traits'
 
   invoking-harmony:
     text: 'Invoking Harmony'
     modifiers:
       multiplier: {'Effective Healing': 0.2}
-    armory-embed: 'traits'
-    armory-id: 1818
+    gw2-id: 1818
+    armory-type: 'traits'
 
 - SECTION: 'Renegade'
 
@@ -169,34 +169,34 @@
     text: 'Ambush Commander <small>5x Kalla''s Fervor</small>'
     modifiers:
       multiplier: {'add: Effective Power': 0.1, 'add: Effective Condition Damage': 0.1}
-    armory-embed: 'traits'
-    armory-id: 2181
+    gw2-id: 2181
+    armory-type: 'traits'
 
   blood-fury:
     text: 'Blood Fury'
     modifiers:
       buff: {'Bleeding Duration': 25}
-    armory-embed: 'traits'
-    armory-id: 2079
+    gw2-id: 2079
+    armory-type: 'traits'
 
   heartpiercer:
     text: 'Heartpiercer'
     modifiers:
       multiplier: {'Bleeding Damage': 0.25}
-    armory-embed: 'traits'
-    armory-id: 2092
+    gw2-id: 2092
+    armory-type: 'traits'
 
   brutal-momentum:
     text: 'Brutal Momentum'
     modifiers:
       buff: {'Critical Chance': 33}
-    armory-embed: 'traits'
-    armory-id: 2142
+    gw2-id: 2142
+    armory-type: 'traits'
 
   lasting-legacy:
     text: 'Lasting Legacy <small>additional bonus from 5x Kalla''s Fervor</small>'
     modifiers:
       multiplier: {'add: Effective Power': 0.05, 'add: Effective Condition Damage': 0.05}
-    armory-embed: 'traits'
-    armory-id: 2100
+    gw2-id: 2100
+    armory-type: 'traits'
 
