--- a/src/yaml/sigils.yaml
+++ b/src/yaml/sigils.yaml
@@ -4,29 +4,29 @@
     text: 'Superior Sigil of Force'
     modifiers:
       multiplier: {'add: Effective Power': 0.05}
-    armory-embed: 'items'
-    armory-id: 24615
+    gw2-id: 24615
+    armory-type: 'items'
 
   accuracy:
     text: 'Superior Sigil of Accuracy'
     modifiers:
       flat: {'Critical Chance': 7}
-    armory-embed: 'items'
-    armory-id: 24618
+    gw2-id: 24618
+    armory-type: 'items'
 
   night/impact/slaying<br-<small>(both-7%/3%)</small>:
     text: 'Superior Sigil of the Night/Impact/Slaying<br> <small>(Both 7%/3%)</small>'
     modifiers:
       multiplier: {'add: Effective Power': 0.1}
-    armory-embed: 'items'
-    armory-id: 36053
+    gw2-id: 36053
+    armory-type: 'items'
 
   night/impact/slaying<br-<small>(only-3%)</small>:
     text: 'Superior Sigil of the Night/Impact/Slaying<br> <small>(Only 3%)</small>'
     modifiers:
       multiplier: {'add: Effective Power': 0.03}
-    armory-embed: 'items'
-    armory-id: 36053
+    gw2-id: 36053
+    armory-type: 'items'
 
 - SECTION: 'Support Sigils'
 
@@ -34,8 +34,8 @@
     text: 'Superior Sigil of Concentration'
     modifiers:
       flat: {'Boon Duration': 10}
-    armory-embed: 'items'
-    armory-id: 72339
+    gw2-id: 72339
+    armory-type: 'items'
 
 - SECTION: 'Heal Sigils'
 
@@ -43,8 +43,8 @@
     text: 'Superior Sigil of Transference'
     modifiers:
       multiplier: {'Effective Healing': 0.1}
-    armory-embed: 'items'
-    armory-id: 74326
+    gw2-id: 74326
+    armory-type: 'items'
 
 - SECTION: 'Condition Sigils'
 
@@ -52,43 +52,43 @@
     text: 'Superior Sigil of Malice'
     modifiers:
       flat: {'Condition Duration': 10}
-    armory-embed: 'items'
-    armory-id: 44950
+    gw2-id: 44950
+    armory-type: 'items'
 
   bursting:
     text: 'Superior Sigil of Bursting'
     modifiers:
       multiplier: {'add: Effective Condition Damage': 0.05}
-    armory-embed: 'items'
-    armory-id: 44944
+    gw2-id: 44944
+    armory-type: 'items'
 
   agony:
     text: 'Superior Sigil of Agony'
     modifiers:
       flat: {'Bleeding Duration': 20}
-    armory-embed: 'items'
-    armory-id: 24612
+    gw2-id: 24612
+    armory-type: 'items'
 
   smoldering:
     text: 'Superior Sigil of Smoldering'
     modifiers:
       flat: {'Burning Duration': 20}
-    armory-embed: 'items'
-    armory-id: 24624
+    gw2-id: 24624
+    armory-type: 'items'
 
   venom:
     text: 'Superior Sigil of Venom'
     modifiers:
       flat: {'Poison Duration': 20}
-    armory-embed: 'items'
-    armory-id: 24632
+    gw2-id: 24632
+    armory-type: 'items'
 
   demons:
     text: 'Superior Sigil of Demons'
     modifiers:
       flat: {'Torment Duration': 20}
-    armory-embed: 'items'
-    armory-id: 24583
+    gw2-id: 24583
+    armory-type: 'items'
 
 - SECTION: 'Stacking Sigils (25x)'
 
@@ -96,57 +96,57 @@
     text: 'Superior Sigil of Bloodlust'
     modifiers:
       flat: {'Power': 250}
-    armory-embed: 'items'
-    armory-id: 24575
+    gw2-id: 24575
+    armory-type: 'items'
 
   cruelty:
     text: 'Superior Sigil of Cruelty'
     modifiers:
       flat: {'Ferocity': 250}
-    armory-embed: 'items'
-    armory-id: 67341
+    gw2-id: 67341
+    armory-type: 'items'
 
   perception:
     text: 'Superior Sigil of Perception'
     modifiers:
       flat: {'Precision': 250}
-    armory-embed: 'items'
-    armory-id: 24580
+    gw2-id: 24580
+    armory-type: 'items'
 
   corruption:
     text: 'Superior Sigil of Corruption'
     modifiers:
       flat: {'Condition Damage': 250}
-    armory-embed: 'items'
-    armory-id: 24578
+    gw2-id: 24578
+    armory-type: 'items'
 
   life:
     text: 'Superior Sigil of Life'
     modifiers:
       flat: {'Healing Power': 250}
-    armory-embed: 'items'
-    armory-id: 24582
+    gw2-id: 24582
+    armory-type: 'items'
 
   bounty:
     text: 'Superior Sigil of Bounty'
     modifiers:
       flat: {'Concentration': 225}
-    armory-embed: 'items'
-    armory-id: 81045
+    gw2-id: 81045
+    armory-type: 'items'
 
   benevolence:
     text: 'Superior Sigil of Benevolence'
     modifiers:
       multiplier: {'Effective Healing': 0.125}
-    armory-embed: 'items'
-    armory-id: 24584
+    gw2-id: 24584
+    armory-type: 'items'
 
   stars:
     text: 'Superior Sigil of the Stars'
     modifiers:
       flat: {'Power': 50, 'Precision': 50, 'Toughness': 50, 'Vitality': 50, 'Ferocity': 50, 'Condition Damage': 50, 'Healing Power': 50, 'Concentration': 50, 'Expertise': 50}
-    armory-embed: 'items'
-    armory-id: 86170
+    gw2-id: 86170
+    armory-type: 'items'
 
 - SECTION: 'Gemstones'
 
@@ -154,6 +154,6 @@
     text: 'Platinum Doubloon'
     modifiers:
       flat: {'Concentration': 40}
-    armory-embed: 'items'
-    armory-id: 24773
+    gw2-id: 24773
+    armory-type: 'items'
 
