--- a/src/yaml/buff.yaml
+++ b/src/yaml/buff.yaml
@@ -32,6 +32,7 @@
     gw2-id: 14405
     armory-type: 'skills'
     default-enabled: true
+    extraCSS: 'text-warrior'
 
   banner-of-discipline:
     text: 'Banner of Discipline'
@@ -40,6 +41,7 @@
     gw2-id: 14407
     armory-type: 'skills'
     default-enabled: true
+    extraCSS: 'text-warrior'
 
   banner-of-tactics:
     text: 'Banner of Tactics'
@@ -47,6 +49,7 @@
       buff: {'Healing Power': 100, 'Boon Duration': 10}
     gw2-id: 14408
     armory-type: 'skills'
+    extraCSS: 'text-warrior'
 
   empower-allies:
     text: 'Empower Allies'
@@ -54,6 +57,7 @@
       buff: {'Power': 100}
     gw2-id: 1482
     armory-type: 'traits'
+    extraCSS: 'text-warrior'
 
 - SECTION: ''
 
@@ -99,6 +103,7 @@
     gw2-id: 9093
     armory-type: 'skills'
     default-enabled: true
+    extraCSS: 'text-guardian'
 
   guardian-x2:
     text: 'Signet of Judgement'
@@ -106,6 +111,7 @@
       multiplier: {'Effective Health': 0.12}
     gw2-id: 9150
     armory-type: 'skills'
+    extraCSS: 'text-guardian'
 
   guardian-x3:
     text: 'Signet of Mercy'
@@ -113,6 +119,7 @@
       buff: {'Boon Duration': 10}
     gw2-id: 9163
     armory-type: 'skills'
+    extraCSS: 'text-guardian'
 
   guardian-x4:
     text: 'Signet of Wrath'
@@ -120,6 +127,7 @@
       buff: {'Condition Damage': 216}
     gw2-id: 9151
     armory-type: 'skills'
+    extraCSS: 'text-guardian'
 
 - SECTION: ''
 
@@ -130,6 +138,7 @@
     gw2-id: 1786
     armory-type: 'traits'
     default-enabled: true
+    extraCSS: 'text-revenant'
 
   facet-of-nature:
     text: 'Facet of Nature—Dragon'
@@ -137,6 +146,7 @@
       buff: {'Boon Duration': 20}
     gw2-id: 29371
     armory-type: 'skills'
+    extraCSS: 'text-revenant'
 
   rite-of-the-great-dwarf:
     text: 'Rite of the Great Dwarf'
@@ -144,4 +154,5 @@
       multiplier: {'Effective Health': 0.5}
     gw2-id: 27975
     armory-type: 'skills'
+    extraCSS: 'text-revenant'
 
